--- a/pyproject.toml
+++ b/pyproject.toml
@@ -285,80 +285,92 @@ spaces_indent_inline_array = 4
 trailing_comma_inline_array = true
 
 [tool.tox]
-legacy_tox_ini = """
-[tox]
-envlist =
-    cov
-    doc
-    linkcheck
-    sty
-skip_install = True
-skip_missing_interpreters = True
-skipsdist = True
+env_list = [
+    "cov",
+    "doc",
+    "linkcheck",
+    "sty",
+]
+requires = ["tox>=4.19"]
+skip_install = true
+skip_missing_interpreters = true
+skipsdist = true
 
-[testenv]
-allowlist_externals =
-    pytest
-commands =
-    pytest {posargs}
-description = Run all unit tests
-passenv = *
+[tool.tox.env.cov]
+allowlist_externals = ["pytest"]
+commands = [
+    [
+        "pytest",
+        "--cov-fail-under=35",
+        "--cov-report=html",
+        "--cov-report=xml",
+        "--cov=compwa_policy",
+        "{posargs}",
+    ],
+]
+description = "Compute test coverage"
 
-[testenv:cov]
-allowlist_externals =
-    pytest
-commands =
-    pytest {posargs} \
-        --cov-fail-under=35 \
-        --cov-report=html \
-        --cov-report=xml \
-        --cov=compwa_policy
-description = Compute test coverage
+[tool.tox.env.doc]
+allowlist_externals = ["sphinx-build"]
+commands = [
+    [
+        "sphinx-build",
+        "--builder=html",
+        "--fail-on-warning",
+        "--keep-going",
+        "--show-traceback",
+        "docs/",
+        "docs/_build/html",
+    ],
+]
+description = "Build documentation and API through Sphinx"
 
-[testenv:doc]
-allowlist_externals =
-    sphinx-build
-commands =
-    sphinx-build \
-        --builder=html \
-        --fail-on-warning \
-        --keep-going \
-        --show-traceback \
-        docs/ docs/_build/html
-description = Build documentation and API through Sphinx
+[tool.tox.env.doclive]
+allowlist_externals = ["sphinx-autobuild"]
+commands = [
+    [
+        "sphinx-autobuild",
+        "--ignore=docs/_build",
+        "--ignore=docs/api",
+        "--open-browser",
+        "--port=0",
+        "--re-ignore='.*\\.egg-info'",
+        "--re-ignore='.*/__pycache__/.*'",
+        "--watch=docs",
+        "--watch=src",
+        "docs/",
+        "docs/_build/html",
+    ],
+]
+description = "Set up a server to directly preview changes to the HTML pages"
 
-[testenv:doclive]
-allowlist_externals =
-    sphinx-autobuild
-commands =
-    sphinx-autobuild \
-        --ignore=docs/_build \
-        --ignore=docs/api \
-        --open-browser \
-        --port=0 \
-        --re-ignore='.*\\.egg-info' \
-        --re-ignore='.*/__pycache__/.*' \
-        --watch=docs \
-        --watch=src \
-        docs/ docs/_build/html
-description = Set up a server to directly preview changes to the HTML pages
+[tool.tox.env.linkcheck]
+allowlist_externals = ["sphinx-build"]
+commands = [
+    [
+        "sphinx-build",
+        "--builder=linkcheck",
+        "--show-traceback",
+        "docs/",
+        "docs/_build/linkcheck",
+    ],
+]
+description = "Check external links in the documentation (requires internet connection)"
+setenv = [
+    {"PYTHONWARNINGS" = ""},
+]
 
-[testenv:linkcheck]
-allowlist_externals =
-    sphinx-build
-commands =
-    sphinx-build \
-        --builder=linkcheck \
-        --show-traceback \
-        docs/ docs/_build/linkcheck
-description = Check external links in the documentation (requires internet connection)
-setenv =
-    PYTHONWARNINGS =
+[tool.tox.env.sty]
+allowlist_externals = ["pre-commit"]
+commands = [
+    ["pre-commit", "run", "--all-files", "{posargs}"],
+]
+description = "Perform all linting, formatting, and spelling checks"
 
-[testenv:sty]
-allowlist_externals =
-    pre-commit
-commands =
-    pre-commit run --all-files {posargs}
-description = Perform all linting, formatting, and spelling checks
-"""
+[tool.tox.env_run_base]
+allowlist_externals = ["pytest"]
+commands = [
+    ["pytest", "{posargs}"],
+]
+description = "Run all unit tests"
+passenv = ["*"]
