update Epic label to include emoji

--- a/labels/physics.toml
+++ b/labels/physics.toml
@@ -1,7 +1,7 @@
 # cspell:disable
-[Epic]
+["💥 Epic"]
 color = "3E4B9E"
-name = "Epic"
+name = "💥 Epic"
 description = "Collection of issues"
 
 ["⚙️ Enhancement"]
