--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
   pytest:
     uses: ComPWA/actions/.github/workflows/pytest.yml@v2.1
     with:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       coverage-target: compwa_policy
       macos-python-version: "3.9"
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
