--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,11 @@ jobs:
   pytest:
     uses: ComPWA/actions/.github/workflows/pytest.yml@v2.1
     with:
-      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       coverage-target: compwa_policy
       macos-python-version: "3.9"
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
   style:
     if: inputs.specific-pip-packages == ''
     secrets:
