--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
       coverage-target: compwa_policy
       macos-python-version: "3.9"
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
   style:
     if: inputs.specific-pip-packages == ''
     secrets:
