ENH: set `sphinx.configuration`
https://about.readthedocs.com/blog/2024/12/deprecate-config-files-without-sphinx-or-mkdocs-config/

--- a/tests/check_dev_files/readthedocs/extend/.readthedocs-good.yml
+++ b/tests/check_dev_files/readthedocs/extend/.readthedocs-good.yml
@@ -13,3 +13,5 @@ build:
       - mkdir bin
       - ln -s $PWD/julia-1.9.2/bin/julia bin/julia
       - ./bin/julia docs/InstallIJulia.jl
+sphinx:
+  configuration: docs/conf.py
