--- a/tests/check_dev_files/readthedocs/overwrite/.readthedocs-good.yml
+++ b/tests/check_dev_files/readthedocs/overwrite/.readthedocs-good.yml
@@ -7,3 +7,5 @@ build:
     post_install:
       - python -m pip install 'uv>=0.2.0'
       - python -m uv pip install -e .[doc]
+sphinx:
+  configuration: docs/conf.py
