--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -44,16 +44,16 @@ jobs:
 
       - name: Sync issue labels for physics repositories
         run: |
-          labels sync --filename labels/default.toml --owner ComPWA --repo .github
-          labels sync --filename labels/default.toml --owner ComPWA --repo .github-private
-          labels sync --filename labels/default.toml --owner ComPWA --repo gluex-amplitude
-          labels sync --filename labels/default.toml --owner ComPWA --repo gluex-nstar
-          labels sync --filename labels/default.toml --owner ComPWA --repo gluex-nstar-analysis
-          labels sync --filename labels/default.toml --owner ComPWA --repo K-matrix-research
-          labels sync --filename labels/default.toml --owner ComPWA --repo Nstar-docs
-          labels sync --filename labels/default.toml --owner ComPWA --repo polarimetry
-          labels sync --filename labels/default.toml --owner ComPWA --repo PWA-JPsi2pbarSigmaKS
-          labels sync --filename labels/default.toml --owner ComPWA --repo report
-          labels sync --filename labels/default.toml --owner ComPWA --repo RUB-EP1-AG
-          labels sync --filename labels/default.toml --owner ComPWA --repo strong2020-salamanca
+          labels sync --filename labels/physics.toml --owner ComPWA --repo .github
+          labels sync --filename labels/physics.toml --owner ComPWA --repo .github-private
+          labels sync --filename labels/physics.toml --owner ComPWA --repo gluex-amplitude
+          labels sync --filename labels/physics.toml --owner ComPWA --repo gluex-nstar
+          labels sync --filename labels/physics.toml --owner ComPWA --repo gluex-nstar-analysis
+          labels sync --filename labels/physics.toml --owner ComPWA --repo K-matrix-research
+          labels sync --filename labels/physics.toml --owner ComPWA --repo Nstar-docs
+          labels sync --filename labels/physics.toml --owner ComPWA --repo polarimetry
+          labels sync --filename labels/physics.toml --owner ComPWA --repo PWA-JPsi2pbarSigmaKS
+          labels sync --filename labels/physics.toml --owner ComPWA --repo report
+          labels sync --filename labels/physics.toml --owner ComPWA --repo RUB-EP1-Fritsch
+          labels sync --filename labels/physics.toml --owner ComPWA --repo strong2020-salamanca
           labels sync --filename labels/physics.toml --owner ComPWA --repo PWA-pages
