--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "rtoml", # fast, read-only parsing
     "ruamel.yaml", # better YAML dumping
     "tomlkit", # preserve original TOML formatting
+    'more-itertools; python_version <"3.10.0"', # pairwise
     'typing-extensions; python_version <"3.12.0"', # override
 ]
 description = "Pre-commit hooks that ensure that ComPWA repositories have a similar developer set-up"
