FEAT: always overwrite kernel name to "Python 3 (ipykernel)"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ fix-nbformat-version = "compwa_policy.fix_nbformat_version:main"
 remove-empty-tags = "compwa_policy.remove_empty_tags:main"
 self-check = "compwa_policy.self_check:main"
 set-nb-cells = "compwa_policy.set_nb_cells:main"
+set-nb-display-name = "compwa_policy.set_nb_display_name:main"
 
 [project.urls]
 Source = "https://github.com/ComPWA/policy"
