--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -40,3 +40,12 @@
   language: python
   types:
     - jupyter
+
+- id: set-nb-display-name
+  name: Revert display name of the notebook kernel
+  description: >
+    Remove the tags metadata field from Jupyter notebooks if there are no tags
+  entry: set-nb-display-name
+  language: python
+  types:
+    - jupyter
