DX: remove `pytest-xdist`
Fast enough without multithreading on this repo

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,6 +51,7 @@ repos:
           - --allow-labels
           - --dependabot=update
           - --no-pypi
+          - --pytest-single-threaded
           - --repo-name=policy
           - --repo-title=ComPWA repository policy
 
