--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
     with:
       coverage-target: compwa_policy
       macos-python-version: "3.10"
+      multithreaded: false
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
