--- a/labels/default.toml
+++ b/labels/default.toml
@@ -1,8 +1,3 @@
-["💥 Epic"]
-color = "3E4B9E"
-name = "💥 Epic"
-description = "Collection of issues"
-
 ["⚙️ Enhancement"]
 color = "C2E0C6"
 name = "⚙️ Enhancement"
@@ -33,10 +28,20 @@ color = "F9D0C4"
 name = "❗ Behavior"
 description = "Changes that may affect the framework output"
 
+["⬆️ Lock"]
+color = "cfd3d7"
+name = "⬆️ Lock"
+description = "This PR upgrades the lock files"
+
 ["🐛 Bug"]
 color = "D93F0B"
 name = "🐛 Bug"
 description = "Something isn't working"
+
+["💥 Epic"]
+color = "3E4B9E"
+name = "💥 Epic"
+description = "Collection of issues"
 
 ["💫 Good first issue"]
 color = "F4EAEF"
