--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,11 +159,12 @@ sequence = [
 
 [tool.poe.tasks.cov]
 cmd = """
-pytest \
-    --cov-fail-under=32 \
-    --cov-report=html \
-    --cov-report=xml \
-    ${paths}
+uv run --group test --isolated --no-dev \
+    pytest \
+        --cov-fail-under=32 \
+        --cov-report=html \
+        --cov-report=xml \
+        ${paths}
 """
 help = "Compute how much of the source code is covered by tests"
 
@@ -175,52 +176,56 @@ positional = true
 
 [tool.poe.tasks.doc]
 cmd = """
-sphinx-build \
-    --builder=html \
-    --fail-on-warning \
-    --keep-going \
-    --show-traceback \
-    docs/ \
-    docs/_build/html/
+uv run --group doc --isolated --no-dev \
+    sphinx-build \
+        --builder=html \
+        --fail-on-warning \
+        --keep-going \
+        --show-traceback \
+        docs/ \
+        docs/_build/html/
 """
 help = "Run all unit tests"
 
 [tool.poe.tasks.doclive]
 cmd = """
-sphinx-autobuild \
-    --builder=html \
-    --port=0 \
-    --re-ignore=/__pycache__(/.*)?$ \
-    --re-ignore=/_build(/.*)?$ \
-    --re-ignore=/\\.egg-info(/.*)?$ \
-    --re-ignore=/api(/.*)?$ \
-    --re-ignore=/docs$ \
-    --re-ignore=/version\\.py$ \
-    --re-ignore=\\.egg-info(/.*)?$ \
-    --re-ignore=\\.png$ \
-    --re-ignore=\\.svg$ \
-    --watch=src \
-    docs/ \
-    docs/_build/html/
+uv run --group doc --isolated --no-dev \
+    sphinx-autobuild \
+        --builder=html \
+        --open-browser \
+        --port=0 \
+        --re-ignore=/__pycache__(/.*)?$ \
+        --re-ignore=/_build(/.*)?$ \
+        --re-ignore=/\\.egg-info(/.*)?$ \
+        --re-ignore=/api(/.*)?$ \
+        --re-ignore=/docs$ \
+        --re-ignore=/version\\.py$ \
+        --re-ignore=\\.egg-info(/.*)?$ \
+        --re-ignore=\\.png$ \
+        --re-ignore=\\.svg$ \
+        --watch=src \
+        docs/ \
+        docs/_build/html/
 """
 help = "Run all unit tests"
 
 [tool.poe.tasks.linkcheck]
 cmd = """
-sphinx-build \
-    --builder=linkcheck \
-    --show-traceback \
-    docs/ \
-    docs/_build/linkcheck/
+uv run --group doc --isolated --no-dev \
+    sphinx-build \
+        --builder=linkcheck \
+        --show-traceback \
+        docs/ \
+        docs/_build/linkcheck/
 """
 help = "Check external links in the documentation (requires internet connection)"
 
 [tool.poe.tasks.style]
-cmd = "pre-commit run --all-files"
+cmd = "uv run --group style --isolated --no-dev pre-commit run --all-files"
 help = "Perform all linting, formatting, and spelling checks"
 
 [tool.poe.tasks.test]
-cmd = "pytest --no-summary ${paths}"
+cmd = "uv run --group test --isolated --no-dev pytest --no-summary ${paths}"
 help = "Run all unit tests"
 
 [[tool.poe.tasks.test.args]]
