--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,6 +51,7 @@ repos:
         args:
           - --allow-labels
           - --dependabot=update
+          - --excluded-python-versions=3.14
           - --no-pypi
           - --pytest-single-threaded
           - --repo-name=policy
