--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,13 @@ requires = [
 
 [project]
 authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
+classifiers = [
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.9",
+]
 dependencies = [
     "PyYAML",
     "attrs >=20.1.0", # https://www.attrs.org/changelog.html#id82
@@ -28,7 +35,7 @@ dynamic = ["version"]
 license = {text = "BSD 3-Clause License"}
 maintainers = [{email = "compwa-admin@ep1.rub.de"}]
 name = "compwa-policy"
-requires-python = ">=3.9,<3.14"
+requires-python = ">=3.9"
 
 [project.readme]
 content-type = "text/markdown"
