--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
     "PyYAML",
@@ -243,11 +244,11 @@ positional = true
 [tool.poe.tasks.test-all]
 help = "Run all tests on each supported Python version"
 sequence = [
-    {ref = "test-py 3.9"},
     {ref = "test-py 3.10"},
     {ref = "test-py 3.11"},
     {ref = "test-py 3.12"},
     {ref = "test-py 3.13"},
+    {ref = "test-py 3.14"},
 ]
 
 [tool.poe.tasks.test-py]
