--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "astral-sh.ty",
     "charliermarsh.ruff",
     "christian-kohler.path-intellisense",
     "eamodio.gitlens",
@@ -9,9 +10,7 @@
     "github.vscode-github-actions",
     "github.vscode-pull-request-github",
     "mhutchie.git-graph",
-    "ms-python.mypy-type-checker",
     "ms-python.python",
-    "ms-python.vscode-pylance",
     "ms-vscode.live-server",
     "ms-vsliveshare.vsliveshare",
     "redhat.vscode-yaml",
@@ -29,7 +28,9 @@
     "ms-python.black-formatter",
     "ms-python.flake8",
     "ms-python.isort",
+    "ms-python.mypy-type-checker",
     "ms-python.pylint",
+    "ms-python.vscode-pylance",
     "ryanluker.vscode-coverage-gutters",
     "travisillig.vscode-json-stable-stringify",
     "tyriar.sort-lines"
