--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
   },
   "notebook.formatOnSave.enabled": true,
   "python.defaultInterpreterPath": ".venv/bin/python",
+  "python.languageServer": "None",
   "python.terminal.activateEnvironment": false,
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
