ENH: add `--no-progress` flag to `ty` pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -101,7 +101,7 @@ repos:
       - id: ty
         name: ty
         entry: ty check
-        args: [--output-format=concise]
+        args: [--no-progress, --output-format=concise]
         require_serial: true
         language: system
         types_or: [python, pyi, jupyter]
