DX: type argument namespace
* FEAT: set schedule interval in dpeendabot

--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -12,6 +12,8 @@ on:
       - epic/*
     paths:
       - .pre-commit-config.yaml
+  schedule:
+    - cron: "0 3 7 */3 *"
   workflow_dispatch:
 
 jobs:
