--- a/pyproject.toml
+++ b/pyproject.toml
@@ -268,6 +268,7 @@ filterwarnings = [
     "ignore: Importing ErrorTree directly from the jsonschema package is deprecated.*",
     "ignore: The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
 ]
+minversion = "9.0"
 testpaths = [
     "src",
     "tests",
