--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   style:
     name: Sync labels
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     env:
       LABELS_USERNAME: "${{ secrets.LABELS_USERNAME }}"
       LABELS_TOKEN: "${{ secrets.LABELS_TOKEN }}"
